52 - Add backend endpoint to get organisation info